--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,27 +7,20 @@ include_directories(.)
 include_directories(linklist)
 include_directories(stackNqueue)
 
-add_executable(test
-        test.cpp)
+add_executable(test test.cpp utils.h)
 
-add_executable(hash
-        hash/main.cpp
-        utils.h)
+add_executable(hash hash/main.cpp)
 
 add_executable(double_pointer
-        double_pointer/main.cpp
-        utils.h)
+        double_pointer/main.cpp)
 
 add_executable(tree
-        tree/main.cpp
-        utils.h)
+        tree/main.cpp)
 
 add_executable(back_tracking
         back_tracking/main.cpp
-        utils.h greedy/main.cpp)
+        greedy/main.cpp)
 
-add_executable(greedy
-        utils.h greedy/main.cpp)
+add_executable(greedy greedy/main.cpp)
 
-add_executable(dp
-        utils.h dynamic_programming/main.cpp)
+add_executable(dp dynamic_programming/main.cpp)
